# hotdata-marimo

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml
examples/: demo.py  hotdata_basic.py
examples/__marimo__/session/: hotdata_basic.py.json
hotdata_marimo/: __init__.py  _options.py  client.py  connection_picker.py  databases.py  display.py  query_result.py  recent_results.py  run_history.py  sql_editor.py  sql_engine.py  status.py  table_browser.py  workspace_selector.py
scripts/: check-release.py
tests/: conftest.py  test_architecture_guardrails.py  test_client.py  test_databases_marimo.py  test_hotdata_marimo.py  test_imports.py  test_options.py  test_package.py  test_sql_engine_registry.py  test_version.py
