[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hotdata-marimo"
version = "0.1.1"
description = "Marimo integration for Hotdata runtime"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "hotdata-runtime>=0.1.1",
  "hotdata>=0.2.0",
  "marimo>=0.10.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.uv]
default-groups = ["dev"]

# Resolve hotdata-runtime from a sibling checkout until v0.1.1 is on PyPI.
[tool.uv.sources]
hotdata-runtime = { path = "../hotdata-runtime", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["hotdata_marimo"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.marimo.runtime]
# Reduces stale cell state when opening the example; overrides personal marimo.toml if unset.
auto_instantiate = true
